DemoMyApp/src/objects/Exam__c.object
<CustomObject>
    <fields>
        <fullName>Account_Override__c</fullName>
        <label>Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Exams</relationshipLabel>
        <relationshipName>Exams</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <label>Application</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Exams</relationshipLabel>
        <relationshipName>Exams</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Exam_Date__c</fullName>
        <label>Exam: Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exam_Listening__c</fullName>
        <inlineHelpText>Enter Listening score.</inlineHelpText>
        <label>Exam Listening</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exam_Location__c</fullName>
        <label>Exam: Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exam_Provider__c</fullName>
        <label>Exam Provider</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exam_Reading__c</fullName>
        <inlineHelpText>Enter reading score.</inlineHelpText>
        <label>Exam Reading</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exam_Score__c</fullName>
        <label>Exam: Score</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exam_Speaking__c</fullName>
        <inlineHelpText>Enter Speaking score.</inlineHelpText>
        <label>Exam Speaking</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exam_Type__c</fullName>
        <label>Exam: Type</label>
        <picklist>
            <picklistValues>
                <fullName>Cambridge Advanced or Higher</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GRE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IELTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pearson/PTE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TOEFL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TOEIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TOEFL or Equivalent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No test required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SHL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Exam_Writing__c</fullName>
        <inlineHelpText>Enter writing score.</inlineHelpText>
        <label>Exam Writing</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GRE__c</fullName>
        <label>GRE Score Type</label>
        <picklist>
            <controllingField>Exam_Type__c</controllingField>
            <picklistValues>
                <fullName>Verbal Reasoning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quantitative Reasoning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Analytical Writing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NeedofTest__c</fullName>
        <defaultValue>false</defaultValue>
        <label>I need to take my test</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Planned_Test_Date__c</fullName>
        <label>Planned Test Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Planned_Test_Location__c</fullName>
        <label>Planned Test Location</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quant__c</fullName>
        <inlineHelpText>Enter only for GMAT.</inlineHelpText>
        <label>Quant</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TakenTest__c</fullName>
        <defaultValue>false</defaultValue>
        <label>I have already taken my test</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Verbal__c</fullName>
        <inlineHelpText>Enter only for GMAT.</inlineHelpText>
        <label>Verbal</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Verified_Date__c</fullName>
        <label>Verified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Verified?</label>
        <type>Checkbox</type>
    </fields>
    <label>Exam</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Account_Override__c</columns>
        <columns>Account__c</columns>
        <columns>Application__c</columns>
        <columns>Exam_Date__c</columns>
        <columns>Exam_Location__c</columns>
        <columns>Exam_Score__c</columns>
        <columns>Exam_Type__c</columns>
        <columns>Exam_Provider__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Reference #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exams</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>